Mejoras nivel senior: API v1, errores globales, timeouts, CORS, DTOs, links, health, métricas, CI/CD, Docker cache, tests ProductsServiceClient
Made-with: Cursor